přidaní první odstavec

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h2>Stejskal</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur reprehenderit distinctio odio qui repellat
+        maiores debitis mollitia quaerat. Maiores ipsa quibusdam suscipit aliquid adipisci repudiandae molestiae cum,
+        veniam alias saepe?</p>
 </body>
 </html>
