--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur reprehenderit distinctio odio qui repellat
         maiores debitis mollitia quaerat. Maiores ipsa quibusdam suscipit aliquid adipisci repudiandae molestiae cum,
         veniam alias saepe?</p>
+
+    <hr>
+    Patička
+    <hr>
 </body>
 </html>
